--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,10 @@
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.18.0"
+    "qunit": "~1.18.0",
+    "pretender": "~0.9.0",
+    "ember-inflector": "~1.3.1",
+    "lodash": "~3.7.0",
+    "Faker": "~3.0.0"
   }
 }
