--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "active-model-adapter": "1.13.5",
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "1.13.7",
     "ember-cli-app-version": "0.4.0",
@@ -29,12 +30,14 @@
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-mirage": "0.1.6",
     "ember-cli-qunit": "0.3.20",
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.1",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3"
+    "ember-export-application-global": "^1.0.3",
+    "ember-truth-helpers": "1.0.0"
   }
 }
